--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ h4{
          <br>
          <div id="mainCollege">
          <p class="para">
-            “Welcome to this website, which is created by a student who is passionate about our college. However, I would like to inform you that this is not the official website of the college, and I am not affiliated with the college administration in any way. And we do not claim any authority or responsibility for the content posted here. If you wish to visit the official website of the college, which is maintained by the college authorities and contains the latest updates and announcements, kindly click on the image of the college that is displayed on this page. Thank you for your interest and support.</p>
+            Welcome to this website, which is created by a student who is passionate about our college. However, I would like to inform you that this is not the official website of the college, and I am not affiliated with the college administration in any way. And we do not claim any authority or responsibility for the content posted here. If you wish to visit the official website of the college, which is maintained by the college authorities and contains the latest updates and announcements, kindly click on the image of the college that is displayed on this page. Thank you for your interest and support.</p>
             
             
            <div class="img"><a href=https://uietju.in/> <img src="./uietthumbnail.webp" alt="official website " height="150px"></a></div></div>
