--- a/index.html
+++ b/index.html
@@ -170,7 +170,14 @@ h4{
     top:20%;
 
 }
-
+@media(max-width: 1500px){
+      header{
+        width:100vh;
+    }
+    main{
+        width:100vh;
+    }
+}
 @media  (max-width: 1160px){
     .ba{
         visibility: collapse;
@@ -181,10 +188,10 @@ h4{
 }
 @media  (max-width: 1160px){
     header{
-        width:100vh
+        width:100vh;
     }
     main{
-        width:100vh
+        width:100vh;
     }
     h1{
         font-size: 30px;
